--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -6,7 +6,7 @@ on: [push, workflow_dispatch]
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
   RESOURCE-GROUP: rg-az400-eshoponweb-honfui
-  LOCATION: westeurope
+  LOCATION: eastasia
   TEMPLATE-FILE: .azure/bicep/webapp.bicep
   SUBSCRIPTION-ID: /subscriptions/8bfd3344-da62-4db0-b578-4516aaa86065/resourceGroups/rg-az400-eshoponweb-honfui
   WEBAPP-NAME: az400-webapp-honfui
